# isolated-ai-recon-lab

./: .gitattributes  .gitignore  README.md
agent/: pyproject.toml  run.py
agent/config/: default.yaml
agent/src/: agent.py  command_builder.py  config.py  guardrails.py  llm_client.py  logger.py  prompt_templates.py  report_generator.py  state.py  tool_executor.py  tool_parser.py
agent/src/agent/: __init__.py  outcomes.py  planning.py  recon_agent.py  runtime.py
agent/tests/: conftest.py  fakes.py  recon_agent_test_support.py  test_agent.py  test_command_builder.py  test_config.py  test_guardrails.py  test_llm_client.py  test_logger.py  test_prompt_templates.py  test_recon_agent_hardening.py  test_recon_agent_host_discovery.py  test_recon_agent_pipeline_flow.py  test_recon_agent_recovery_paths.py  test_report_generator.py  test_run_cli.py  test_state.py  test_tool_executor.py  test_tool_parser.py
agent/tests/fixtures/: empty.xml  host_discovery.xml  malformed.xml  os_fingerprint.xml  os_fingerprint_multi_osclass.xml  port_scan.xml  service_enum.xml  service_enum_closed_table.xml  service_enum_multi_cpe.xml
docs/: architecture.md  current-limitations.md  infra-setup-guide.md  lab-architecture.md  midpoint-review.md  ollama-setup-guide.md  porting-guide.md  runtime-findings.md
infra/: 01-create-isolated-network.sh  02-create-attacker-vm.sh  03-attacker-post-install.sh  04-create-target-vm.sh  05-pre-lockdown-verify.sh  06-setup-iptables.sh  07-post-lockdown-verify.sh  08-take-snapshot.sh  09-update-inference-ip.sh  10-temp-open-firewall.sh  11-install-ollama.sh  (+4 more)
(+1 files in other folders)
